--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,15 +5,18 @@
 /* blue rgb(2, 89, 182) */
 /* yellow #eba524 */
 
+/* clip-path: ellipse(82% 66% at 51% 34%);*/
+
 @layer base {
   :root {
-    --background: 0 0% 95%;
-    --foreground: 222.2 84% 4.9%;
+    --padding: 2rem;
+    --background: 213.75 80% 96.08%;
+    --foreground: 214.74 50.67% 29.41%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 221.2 83.2% 53.3%;
+    --primary: 221.2 73.2% 53.3%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -56,8 +59,12 @@
   * {
     @apply border-border;
   }
+  html,
+  body {
+    @apply p-0 m-0;
+    font-size: 19px;
+  }
   body {
     @apply bg-background text-foreground;
-    @apply p-4;
   }
 }
