--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -1,3 +1,8 @@
 .main {
-  @apply p-4 mx-auto text-center;
+  @apply mx-auto text-center;
+}
+
+.section {
+  @apply my-8 text-base lg:text-xl px-4 lg:px-2;
+  @apply max-w-xl lg:max-w-2xl mx-auto;
 }
