--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -5,10 +5,38 @@
   @apply px-8;
   @apply z-10;
   @apply py-4;
-  @apply bg-background;
+  @apply bg-background shadow;
+  height: var(--nav-height, 100px);
+
+  h1 {
+    @apply leading-4;
+    span {
+      @apply font-bold text-2xl;
+    }
+  }
 }
 
 .group {
+}
+
+.logo-group {
+  @apply text-center;
+  @apply flex items-center justify-center flex-row;
+  @apply text-primary;
+  @apply w-32;
+
+  mix-blend-mode: darken;
+  svg {
+    @apply block mx-auto;
+    @apply w-10 h-10;
+  }
+  h1 {
+    @apply font-bold text-lg -mb-2;
+  }
+  h2 {
+    font-size: 12px;
+    @apply italic;
+  }
 }
 
 .menu {
