--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -7,9 +7,64 @@
     width: 100%;
     height: 100%;
     img {
-      clip-path: ellipse(82% 88% at 51% 11%);
+      /* using: https://www.wavegenerator.app/ */
+      clip-path: polygon(
+        100% 0%,
+        0% 0%,
+        0% 89.71%,
+        2% 89.64%,
+        4% 89.43%,
+        6% 89.09%,
+        8% 88.63%,
+        10% 88.07%,
+        12% 87.42%,
+        14% 86.71%,
+        16% 85.97%,
+        18% 85.21%,
+        20% 84.48%,
+        22% 83.79%,
+        24% 83.16%,
+        26% 82.63%,
+        28% 82.21%,
+        30% 81.91%,
+        32% 81.75%,
+        34% 81.72%,
+        36% 81.84%,
+        38% 82.09%,
+        40% 82.48%,
+        42% 82.98%,
+        44% 83.57%,
+        46% 84.24%,
+        48% 84.96%,
+        50% 85.71%,
+        52% 86.46%,
+        54% 87.19%,
+        56% 87.86%,
+        58% 88.45%,
+        60% 88.95%,
+        62% 89.33%,
+        64% 89.59%,
+        66% 89.71%,
+        68% 89.68%,
+        70% 89.52%,
+        72% 89.22%,
+        74% 88.8%,
+        76% 88.26%,
+        78% 87.64%,
+        80% 86.95%,
+        82% 86.22%,
+        84% 85.46%,
+        86% 84.72%,
+        88% 84.01%,
+        90% 83.36%,
+        92% 82.8%,
+        94% 82.34%,
+        96% 82%,
+        98% 81.79%,
+        100% 81.71%
+      );
+
       object-fit: cover;
-      object-position: 50% 0;
       width: 100%;
       height: 100%;
     }
