--- a/src/components/LogoGroup/LogoGroup.module.css
+++ b/src/components/LogoGroup/LogoGroup.module.css
@@ -1,6 +1,21 @@
 .logo-group-container {
   @apply transition-all block;
   @apply max-w-[250px] mx-auto;
+
+  &.sm {
+    @apply max-w-[140px];
+    svg {
+      @apply w-8 h-8;
+      @apply -translate-y-0;
+    }
+    .h1 {
+      @apply leading-3 text-base font-bold;
+    }
+    h2 {
+      @apply text-[10px] text-center leading-3 -translate-x-1;
+      @apply italic text-foreground;
+    }
+  }
 }
 
 .logo-group {
