--- a/src/app/history/history.module.css
+++ b/src/app/history/history.module.css
@@ -2,10 +2,10 @@
   @apply max-w-xl mx-auto my-8;
   p {
     @apply my-4;
-    &:first-child {
-      &:first-line {
-        @apply font-bold;
-      }
+  }
+  p:nth-child(2) {
+    &:first-line {
+      @apply font-bold;
     }
   }
 
