--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,69 +1,85 @@
 .image-wrapper {
+  /* https://www.wavegenerator.app/ */
+  --clip: polygon(
+    100% 0%,
+    0% 0%,
+    0% 99.75%,
+    2% 99.65%,
+    4% 99.35%,
+    6% 98.91%,
+    8% 98.39%,
+    10% 97.87%,
+    12% 97.42%,
+    14% 97.12%,
+    16% 97%,
+    18% 97.09%,
+    20% 97.37%,
+    22% 97.81%,
+    24% 98.32%,
+    26% 98.85%,
+    28% 99.3%,
+    30% 99.62%,
+    32% 99.75%,
+    34% 99.67%,
+    36% 99.4%,
+    38% 98.98%,
+    40% 98.46%,
+    42% 97.93%,
+    44% 97.47%,
+    46% 97.15%,
+    48% 97%,
+    50% 97.07%,
+    52% 97.33%,
+    54% 97.74%,
+    56% 98.25%,
+    58% 98.78%,
+    60% 99.25%,
+    62% 99.59%,
+    64% 99.74%,
+    66% 99.69%,
+    68% 99.45%,
+    70% 99.04%,
+    72% 98.53%,
+    74% 98%,
+    76% 97.53%,
+    78% 97.18%,
+    80% 97.01%,
+    82% 97.05%,
+    84% 97.28%,
+    86% 97.68%,
+    88% 98.19%,
+    90% 98.72%,
+    92% 99.2%,
+    94% 99.55%,
+    96% 99.73%,
+    98% 99.71%,
+    100% 99.49%
+  );
   width: 100%;
   overflow: hidden;
   @apply landscape:h-[70vh];
   figure {
     display: block;
+    @apply relative;
     width: 100%;
     height: 100%;
+    .overlay {
+      @apply absolute top-0 left-0 right-0 bottom-0;
+      background: rgba(0, 0, 0, 0.2);
+      clip-path: var(--clip);
+      object-fit: cover;
+    }
+    .text {
+      @apply absolute top-0 left-0 right-0 bottom-0;
+      @apply text-white;
+      text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+      @apply max-w-3xl mx-auto;
+      @apply flex items-center justify-center text-center p-4;
+      @apply text-3xl md:text-5xl lg:text-8xl font-bold;
+    }
     img {
       /* using: https://www.wavegenerator.app/ */
-      clip-path: polygon(
-        100% 0%,
-        0% 0%,
-        0% 89.71%,
-        2% 89.64%,
-        4% 89.43%,
-        6% 89.09%,
-        8% 88.63%,
-        10% 88.07%,
-        12% 87.42%,
-        14% 86.71%,
-        16% 85.97%,
-        18% 85.21%,
-        20% 84.48%,
-        22% 83.79%,
-        24% 83.16%,
-        26% 82.63%,
-        28% 82.21%,
-        30% 81.91%,
-        32% 81.75%,
-        34% 81.72%,
-        36% 81.84%,
-        38% 82.09%,
-        40% 82.48%,
-        42% 82.98%,
-        44% 83.57%,
-        46% 84.24%,
-        48% 84.96%,
-        50% 85.71%,
-        52% 86.46%,
-        54% 87.19%,
-        56% 87.86%,
-        58% 88.45%,
-        60% 88.95%,
-        62% 89.33%,
-        64% 89.59%,
-        66% 89.71%,
-        68% 89.68%,
-        70% 89.52%,
-        72% 89.22%,
-        74% 88.8%,
-        76% 88.26%,
-        78% 87.64%,
-        80% 86.95%,
-        82% 86.22%,
-        84% 85.46%,
-        86% 84.72%,
-        88% 84.01%,
-        90% 83.36%,
-        92% 82.8%,
-        94% 82.34%,
-        96% 82%,
-        98% 81.79%,
-        100% 81.71%
-      );
-
+      clip-path: var(--clip);
       object-fit: cover;
       object-position: 0 25%;
       width: 100%;
