--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,62 @@
 /* clip-path: ellipse(82% 66% at 51% 34%);*/
 
 :root {
-  --hue: 200;
+  --hue: 210;
+  --clip: polygon(
+    100% 0%,
+    0% 0%,
+    0% 99.75%,
+    2% 99.65%,
+    4% 99.35%,
+    6% 98.91%,
+    8% 98.39%,
+    10% 97.87%,
+    12% 97.42%,
+    14% 97.12%,
+    16% 97%,
+    18% 97.09%,
+    20% 97.37%,
+    22% 97.81%,
+    24% 98.32%,
+    26% 98.85%,
+    28% 99.3%,
+    30% 99.62%,
+    32% 99.75%,
+    34% 99.67%,
+    36% 99.4%,
+    38% 98.98%,
+    40% 98.46%,
+    42% 97.93%,
+    44% 97.47%,
+    46% 97.15%,
+    48% 97%,
+    50% 97.07%,
+    52% 97.33%,
+    54% 97.74%,
+    56% 98.25%,
+    58% 98.78%,
+    60% 99.25%,
+    62% 99.59%,
+    64% 99.74%,
+    66% 99.69%,
+    68% 99.45%,
+    70% 99.04%,
+    72% 98.53%,
+    74% 98%,
+    76% 97.53%,
+    78% 97.18%,
+    80% 97.01%,
+    82% 97.05%,
+    84% 97.28%,
+    86% 97.68%,
+    88% 98.19%,
+    90% 98.72%,
+    92% 99.2%,
+    94% 99.55%,
+    96% 99.73%,
+    98% 99.71%,
+    100% 99.49%
+  );
 }
 
 @layer base {
