--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -1,8 +1,11 @@
 .main {
-  @apply mx-auto text-center;
+  @apply mx-auto;
 }
 
 .section {
-  @apply my-8 text-base lg:text-xl px-4 lg:px-2;
-  @apply max-w-xl lg:max-w-2xl mx-auto;
+  @apply my-8 text-lg px-4 lg:px-2;
+  @apply max-w-xl mx-auto;
+  p {
+    @apply my-4;
+  }
 }
