--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,68 +1,24 @@
 .image-wrapper {
   /* https://www.wavegenerator.app/ */
-  --clip: polygon(
-    100% 0%,
-    0% 0%,
-    0% 99.75%,
-    2% 99.65%,
-    4% 99.35%,
-    6% 98.91%,
-    8% 98.39%,
-    10% 97.87%,
-    12% 97.42%,
-    14% 97.12%,
-    16% 97%,
-    18% 97.09%,
-    20% 97.37%,
-    22% 97.81%,
-    24% 98.32%,
-    26% 98.85%,
-    28% 99.3%,
-    30% 99.62%,
-    32% 99.75%,
-    34% 99.67%,
-    36% 99.4%,
-    38% 98.98%,
-    40% 98.46%,
-    42% 97.93%,
-    44% 97.47%,
-    46% 97.15%,
-    48% 97%,
-    50% 97.07%,
-    52% 97.33%,
-    54% 97.74%,
-    56% 98.25%,
-    58% 98.78%,
-    60% 99.25%,
-    62% 99.59%,
-    64% 99.74%,
-    66% 99.69%,
-    68% 99.45%,
-    70% 99.04%,
-    72% 98.53%,
-    74% 98%,
-    76% 97.53%,
-    78% 97.18%,
-    80% 97.01%,
-    82% 97.05%,
-    84% 97.28%,
-    86% 97.68%,
-    88% 98.19%,
-    90% 98.72%,
-    92% 99.2%,
-    94% 99.55%,
-    96% 99.73%,
-    98% 99.71%,
-    100% 99.49%
-  );
   width: 100%;
   overflow: hidden;
-  @apply landscape:h-[70vh];
+  @apply h-[40vh] landscape:h-[25vh];
+  &.large {
+    @apply landscape:h-[70vh];
+    figure {
+      .text {
+        @apply text-2xl md:text-4xl lg:text-6xl;
+      }
+    }
+  }
+
   figure {
     display: block;
     @apply relative;
     width: 100%;
     height: 100%;
+    @apply bg-primary;
+    clip-path: var(--clip);
     .overlay {
       @apply absolute top-0 left-0 right-0 bottom-0;
       background: rgba(0, 0, 0, 0.2);
@@ -72,14 +28,16 @@
     .text {
       @apply absolute top-0 left-0 right-0 bottom-0;
       @apply text-white;
-      text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
       @apply max-w-xl mx-auto;
       @apply flex items-center justify-center text-center p-4;
-      @apply text-2xl md:text-4xl lg:text-6xl font-bold;
+      @apply text-xl md:text-2xl lg:text-3xl font-bold;
+      &.shadow {
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+      }
     }
     img {
       /* using: https://www.wavegenerator.app/ */
-      clip-path: var(--clip);
+
       object-fit: cover;
       object-position: 0 25%;
       width: 100%;
