--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -5,7 +5,7 @@
   @apply px-8;
   @apply z-10;
   @apply py-4;
-  @apply bg-background shadow;
+  @apply bg-background z-20;
   height: var(--nav-height, 100px);
 }
 
@@ -20,10 +20,11 @@
 }
 
 .menu {
+  li {
+  }
   li a,
   li button {
     @apply text-xs text-foreground;
-    @apply shadow-none;
     @media (min-width: 768px) {
       @apply text-base;
     }
