--- a/src/components/Dropdown/dropdown.module.css
+++ b/src/components/Dropdown/dropdown.module.css
@@ -1,13 +1,12 @@
 .wrapper {
   --transition: 150ms all 20ms ease-out;
   @apply relative w-auto;
-  @apply mx-4;
+  @apply mx-2;
 
   &:after {
     content: '';
     @apply absolute;
-    @apply top-0 left-1/2;
-    @apply -translate-x-1/2;
+    @apply top-0 left-1/3;
     transition: var(--transition);
   }
 
@@ -53,7 +52,7 @@
 }
 
 .menu {
-  @apply absolute left-[calc(100%-20px)] top-9;
+  @apply absolute left-[calc(55%)] top-9;
   @apply py-0;
   @apply bg-background;
   @apply origin-top;
