--- a/src/components/LogoGroup/LogoGroup.module.css
+++ b/src/components/LogoGroup/LogoGroup.module.css
@@ -1,7 +1,9 @@
 .logo-group-container {
   @apply transition-all block;
-  @apply max-w-[250px] mx-auto;
+  @apply mx-auto;
+  @apply max-w-[250px];
 
+  /* footer */
   &.in-footer {
     @apply max-w-[140px];
     .logo-group {
@@ -29,11 +31,11 @@
   mix-blend-mode: darken;
   svg {
     @apply block mx-auto;
-    @apply w-12 h-12;
+    @apply w-6 h-6 md:w-8 md:h-8 lg:w-12 lg:h-12;
     @apply -translate-y-2;
   }
   .h1 {
-    @apply leading-4 text-3xl font-bold;
+    @apply leading-4 text-xl md:text-2xl lg:text-3xl font-bold;
   }
   h2 {
     @apply text-xs text-center leading-4 -translate-x-1;
