--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -7,5 +7,10 @@
   @apply max-w-xl mx-auto;
   p {
     @apply my-4;
+    &:first-child {
+      &::first-line {
+        @apply font-bold;
+      }
+    }
   }
 }
