--- a/src/app/news/page.module.css
+++ b/src/app/news/page.module.css
@@ -5,16 +5,21 @@
     @apply rounded-lg;
     @apply mt-8 mb-16;
     @apply p-8;
-    :global(p.title) {
-      @apply text-primary text-3xl font-bold;
+
+    :global(h1) {
+      @apply text-2xl text-primary font-bold;
     }
 
-    :global(p:not(.title)) {
-      @apply my-4;
+    :global(h2) {
+      @apply text-xl font-bold;
+    }
+
+    :global(p) {
+      @apply text-lg my-4;
     }
 
     :global(img) {
-      @apply my-4;
+      @apply my-6;
       @apply w-full;
     }
   }
