--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,8 @@
 @layer base {
   :root {
     --padding: 2rem;
-    --background: var(--hue) 80% 99.08%;
+    --background: 50 100% 96%;
+    --background-lighter: 50 100% 98%;
     --foreground: var(--hue) 50.67% 29.41%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
