--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -42,3 +42,11 @@
     }
   }
 }
+
+.text {
+  /* -webkit-text-stroke: 1px black; */
+  @apply font-bold;
+  @apply text-5xl md:!text-7xl;
+  text-shadow: 1px 1px var(--text-background-ligher),
+    -1px -1px 1px var(--text-background-ligher);
+}
