--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -2,7 +2,7 @@
   /* https://www.wavegenerator.app/ */
   width: 100%;
   overflow: hidden;
-  @apply h-[40vh];
+  @apply h-[30vh];
   &.large {
     @apply landscape:h-[70vh];
     figure {
@@ -44,9 +44,9 @@
 }
 
 .text {
-  /* -webkit-text-stroke: 1px black; */
   @apply font-bold;
   @apply text-5xl md:!text-7xl;
-  text-shadow: 1px 1px var(--text-background-ligher),
-    -1px -1px 1px var(--text-background-ligher);
+  text-shadow: 1px 10px var(--text-background-ligher),
+    -1px -1px 10px var(--text-background-ligher);
+  text-shadow: 2px 2px 10px hsl(var(--foreground));
 }
