--- a/src/app/programs/programs.module.css
+++ b/src/app/programs/programs.module.css
@@ -5,20 +5,20 @@
     @apply max-w-sm md:max-w-xl mx-auto;
   }
   h1 {
-    @apply text-primary font-bold text-3xl leading-8;
+    @apply text-primary font-bold text-xl md:text-3xl leading-8;
     @apply mt-16;
   }
 
   h2 {
-    @apply font-bold text-xl text-primary;
+    @apply font-bold text-base md:text-xl text-primary;
     @apply mt-8;
   }
   h3 {
-    @apply font-bold text-foreground text-lg leading-4;
+    @apply font-bold text-foreground text-base md:text-lg leading-4;
     @apply mt-4;
   }
   p {
-    @apply my-2 text-lg;
+    @apply my-2 text-base md:text-lg;
     &:first-child {
       &::first-line {
         @apply font-bold;
@@ -29,7 +29,7 @@
     @apply underline;
   }
   ul {
-    @apply font-bold text-primary text-lg;
+    @apply font-bold text-primary md:text-lg;
     span {
       @apply mt-4 block;
     }
