--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -3,7 +3,7 @@
 }
 
 .section {
-  @apply my-8 text-lg px-4 lg:px-2 lg:text-xl lg:leading-8;
+  @apply my-8 text-base px-4 lg:px-2 lg:text-lg;
   @apply max-w-xl mx-auto;
   p {
     @apply my-4;
