--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,6 +123,7 @@
   body {
     @apply p-0 m-0;
     font-size: 19px;
+    letter-spacing: -0.01rem;
   }
   body {
     @apply bg-background text-foreground;
