--- a/src/app/news/page.module.css
+++ b/src/app/news/page.module.css
@@ -7,15 +7,20 @@
     @apply p-8;
 
     :global(h1) {
-      @apply text-2xl text-primary font-bold;
+      @apply text-xl lg:text-2xl text-primary font-bold leading-8;
+      @apply mb-4;
     }
 
     :global(h2) {
-      @apply text-xl font-bold;
+      @apply text-base lg:text-lg mt-4 mb-2 font-bold;
+    }
+
+    :global(h3) {
+      @apply text-sm lg:text-base italic font-bold;
     }
 
     :global(p) {
-      @apply text-lg my-4;
+      @apply text-lg my-2;
     }
 
     :global(img) {
